fix: dark mode signup form

--- a/sass/_signup.scss
+++ b/sass/_signup.scss
@@ -9,6 +9,7 @@
   &, * {
     font-family: 'Crimson Text', serif!important;
     line-height: 1.5;
+    color: var(--color-text);
   }
 
   h4 {
